--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "firebase": "^9.17.1",
+    "firebaseui": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
