Created basic functions for firebase auth actions

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyDfU_kosCskh61zL81t3URzIF49pe1djz8
+VITE_FIREBASE_API_KEY = AIzaSyDfU_kosCskh61zL81t3URzIF49pe1djz8
+VITE_FIREBASE_AUTH_DOMAIN = stevens-todo-app.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID = stevens-todo-app
+VITE_FIREBASE_STORAGE_BUCKET = stevens-todo-app.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID = 159657011001
+VITE_FIREBASE_APP_ID = 1:159657011001:web:01bd42723b012b0f4b2ae8
+VITE_FIREBASE_MEASUREMENT_ID = G-DEN8CYNXPZ
