--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "firebase": "^9.17.1",
-    "firebaseui": "^6.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
