--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/montserrat": "^4.5.14",
     "@headlessui/react": "^1.7.13",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
